# sentinelgate

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: sentinelgate.yml
demo_repo/: app.py
sentinelgate/: __init__.py  baseline.py  cli.py  mapper.py  models.py  normalizer.py  orchestrator.py  reporter.py  scoring.py
sentinelgate/rules/: python-security.yml
sentinelgate/scanners/: base.py  dependency_scanner.py  secrets_scanner.py  semgrep_scanner.py
tests/: test_baseline.py  test_mapper.py  test_models.py  test_normalizer.py  test_reporter.py  test_scanners.py  test_scoring.py
